--- a/bundle/manifests/rp5.reportportal.io_reportportals.yaml
+++ b/bundle/manifests/rp5.reportportal.io_reportportals.yaml
@@ -82,6 +82,18 @@ spec:
               ui_replicas:
                 description: Replicas number for service-ui component
                 type: integer
+              s3_enabled:
+                description: If set minio will use gateway connect to S3
+                type: boolean
+              s3_endpoint:
+                description: Set s3 endpoint for minio gateway connect to S3
+                type: string
+              bucket_prefix:
+                description: Set s3 bucket unique prefix to avoid name collision
+                type: string
+              default_bucket_name:
+                description: The s3 bucket name to be used
+                type: string
             type: object
           status:
             description: Status defines the observed state of ReportPortal
