--- a/config/crd/bases/rp5.reportportal.io_reportportals.yaml
+++ b/config/crd/bases/rp5.reportportal.io_reportportals.yaml
@@ -88,6 +88,18 @@ spec:
               es_backup_schedule:
                 description: The Elasticsearch snapshot to s3 bucket schedule, crontab schedule format
                 type: string
+              s3_enabled:
+                description: If set minio will use gateway connect to S3
+                type: boolean
+              s3_endpoint:
+                description: Set s3 endpoint for minio gateway connect to S3
+                type: string
+              bucket_prefix:
+                description: Set s3 bucket unique prefix to avoid name collision
+                type: string
+              default_bucket_name:
+                description: The s3 bucket name to be used
+                type: string
           status:
             description: Status defines the observed state of ReportPortal
             type: object
