--- a/roles/reportportal/defaults/main.yml
+++ b/roles/reportportal/defaults/main.yml
@@ -57,6 +57,7 @@ accesskey: AKIAIOSFODNN7EXAMPLE
 secretkey: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
 bucket_prefix: ""
 default_bucket_name: ""
+integration_salt_path: ""
 config_pathmc: "/data/.mc"
 certs_path: "/data/.certs"
 mount_path: "/export"
