--- a/bundle/manifests/rp5.reportportal.io_reportportals.yaml
+++ b/bundle/manifests/rp5.reportportal.io_reportportals.yaml
@@ -46,6 +46,9 @@ spec:
               default_bucket_name:
                 description: The s3 bucket name to be used
                 type: string
+              integration_salt_path:
+                description: Set unique s3 bucket name for uat and api salt to avoid name collision
+                type: string
               enable_pg_restic_backup:
                 description: Whether to enable Postgres backup via restic, yes or no
                 type: string
@@ -82,6 +85,12 @@ spec:
               s3_enabled:
                 description: If set minio will use gateway connect to S3
                 type: boolean
+              accesskey:
+                description: The s3 accesskey
+                type: string
+              secretkey:
+                description: The s3 secretkey
+                type: string
               s3_endpoint:
                 description: Set s3 endpoint for minio gateway connect to S3
                 type: string
