--- a/config/crd/bases/rp5.reportportal.io_reportportals.yaml
+++ b/config/crd/bases/rp5.reportportal.io_reportportals.yaml
@@ -91,6 +91,12 @@ spec:
               s3_enabled:
                 description: If set minio will use gateway connect to S3
                 type: boolean
+              accesskey:
+                description: The s3 accesskey
+                type: string
+              secretkey:
+                description: The s3 secretkey
+                type: string
               s3_endpoint:
                 description: Set s3 endpoint for minio gateway connect to S3
                 type: string
@@ -99,6 +105,9 @@ spec:
                 type: string
               default_bucket_name:
                 description: The s3 bucket name to be used
+                type: string
+              integration_salt_path:
+                description: Set unique s3 bucket name for uat and api salt to avoid name collision
                 type: string
           status:
             description: Status defines the observed state of ReportPortal
