--- a/bundle/manifests/rp5.reportportal.io_reportportalrestores.yaml
+++ b/bundle/manifests/rp5.reportportal.io_reportportalrestores.yaml
@@ -50,7 +50,19 @@ spec:
                 description: The s3 Postgres bucket restic password
                 type: string
               pg_s3_bucket_name:
-                description: The s3 Postgres bucket name, need be unique and valid bucket name
+                description: The s3 Postgres bucket name, need be valid bucket name where WAL files are backed up, use the same bucket name when a ReportPortal CR is created or use a full bucket name with the bucket_prefix included
+                type: string
+              accesskey:
+                description: The s3 accesskey
+                type: string
+              secretkey:
+                description: The s3 secretkey
+                type: string
+              s3_endpoint:
+                description: Set s3 endpoint for minio gateway connect to S3
+                type: string
+              bucket_prefix:
+                description: S3 bucket prefix, e.g. unique-s3-bucket-09a7b9-, use the same prefix when a ReportPortal CR is created or leave empty and use full bucket name in pg_s3_bucket_name and es_snapshot_bucket
                 type: string
             type: object
           status:
